looking at many to many relasionships

--- a/app/views/food_products/show.html.erb
+++ b/app/views/food_products/show.html.erb
@@ -14,4 +14,4 @@
                          :data => {:confirm => "You sure?",
                                    :method => "delete"} %></p>
 
-<p><%= link_to "Return to food products", food_product_path %></p>
+<p><%= link_to "Return to food products", food_products_path %></p>
