update food_product_input to include mount per pan:

--- a/app/views/layouts/_food_product_form.html.erb
+++ b/app/views/layouts/_food_product_form.html.erb
@@ -9,6 +9,8 @@
   <%= f.number_field :amount_to_sell_%>
   <%= f.label :amount_of_pans_ %>
   <%= f.number_field :amount_of_pans_%>
+  <%= f.label :orders_per_pan_ %>
+  <%= f.number_field :orders_per_pan_%>
   <%= f.label :date_ordered_ %>
   <%= f.date_field :date_ordered_%>
   <%= f.label :date_order_arrives_ %>
