input form for menu_item, curently associated info isn't created

--- a/app/views/food_products/index.html.erb
+++ b/app/views/food_products/index.html.erb
@@ -11,3 +11,5 @@
 <% end %>
 
 <p><%= link_to "Create new Food Product", new_food_product_path %></p>
+
+<p><%= link_to "Create new Menu Item", new_menu_item_path %></p>
