--- a/app/views/food_products/show.html.erb
+++ b/app/views/food_products/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @food_product.food_ %></h1>
 <h3>Info about this order:</h3>
 <ul>
-  <li>You ordered<%= @food_product.amount_ordered_ %> cases</li>
+  <li>You ordered<%= @food_product.amount_ordered_ %> case(s)</li>
   <li>You still have <%= @food_product.amount_to_sell_ %> orders to sell</li>
   <li>You still have this many pans <%= @food_product.amount_of_pans_ %></li>
   <li>It came in on <%= @food_product.date_order_arrives_ %></li>
