working on getting button_to work in sell.html.erb

--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @menu_item.name_ %></h1>
 <h3>Info about this menu item:</h3>
 <ul>
-  <li>This item contains <%= @menu_item.food_item1_ %></li>
+  <li>This item contains <%= @menu_item.food_products.ids %></li>
   <li>This item contains <%= @menu_item.food_item2_ %></li>
   <li>This item contains <%= @menu_item.food_item3_ %></li>
 </ul>
