--- a/app/views/layouts/_menu_item_form.html.erb
+++ b/app/views/layouts/_menu_item_form.html.erb
@@ -3,6 +3,14 @@
 <%= form_for @menu_item do |f| %>
   <%= f.label :name_ %>
   <%= f.text_field :name_ %>
+  <p>
+    <%= f.label :food_products %><br />
+    <% for food_product in FoodProduct.all %>
+      <%= check_box_tag "menu_item[food_product_id][]", food_product.id,
+      @menu_item.food_products.include?(food_product) %>
+      <%=h food_product.food_ %><br />
+    <% end %>
+  </p>
   <%= f.label :food_item1_ %>
   <%= f.text_field :food_item1_ %>
   <%= f.label :food_item2_ %>
