--- a/app/views/menu_items/sell.html.erb
+++ b/app/views/menu_items/sell.html.erb
@@ -4,7 +4,7 @@
   <ul>
   <% @menu_items.each do |menu_item| %>
   <li><%= menu_item.name_ %></li>
-    <button type="button">Sell one order of this</button>
+    <button 'decrement_to_sell', home_action_path, method :post type="button">Sell one order of this</button>
   <% end %>
   </ul>
 <% else %>
