WIP working on making button work

--- a/app/views/menu_items/sell.html.erb
+++ b/app/views/menu_items/sell.html.erb
@@ -3,8 +3,8 @@
 <% if @menu_items.any? %>
   <ul>
   <% @menu_items.each do |menu_item| %>
-  <li><%= menu_item.name_ %></li>
-    <%= button_to 'Sell Item', @self.decrement_to_sell %>
+    <li><%= menu_item.name_ %></li>
+    <%= button_to "Sell", sell_menu_item_path(@menu_item.id), params{} %>
   <% end %>
   </ul>
 <% else %>
