--- a/app/views/menu_items/sell.html.erb
+++ b/app/views/menu_items/sell.html.erb
@@ -4,7 +4,7 @@
   <ul>
   <% @menu_items.each do |menu_item| %>
     <li><%= menu_item.name_ %></li>
-    <%= button_to "Sell", sell_menu_item_path(@menu_item.id), params{} %>
+    <%= button_to "Sell", sell_menu_item_path(@menu_item.id) %>
   <% end %>
   </ul>
 <% else %>
