--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -11,3 +11,9 @@
 <% end %>
 
 <p><%= link_to "Create new Menu Item", new_menu_item_path %></p>
+
+<p><%= link_to "Create new Food Product", new_food_product_path %></p>
+
+<p><%= link_to "Return to food products", food_products_path %></p>
+
+<p><%= link_to "Return to Menu Items", menu_items_path %></p>
