--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -1,10 +1,10 @@
 <h1><%= @menu_item.name_ %></h1>
 <h3>Info about this menu item:</h3>
-<ul>
+<%# <ul>
   <li>This item contains <%= @menu_item.food_products.ids %></li>
-  <li>This item contains <%= @menu_item.food_item2_ %></li>
-  <li>This item contains <%= @menu_item.food_item3_ %></li>
-</ul>
+  <%# <li>This item contains <%= @menu_item.food_item2_ %></li> %>
+  <%# <li>This item contains <%= @menu_item.food_item3_ %></li> %>
+<%# </ul> %> %>
 
 <p><%= link_to "Edit", edit_menu_item_path(@menu_item) %></p>
 <p><%= link_to "Delete", menu_item_path(@menu_item),
