--- a/app/views/food_products/show.html.erb
+++ b/app/views/food_products/show.html.erb
@@ -15,3 +15,5 @@
                                    :method => "delete"} %></p>
 
 <p><%= link_to "Return to food products", food_products_path %></p>
+
+<p><%= link_to "Return to Menu Items", menu_items_path %></p>
