--- a/app/views/menu_items/edit.html.erb
+++ b/app/views/menu_items/edit.html.erb
@@ -2,3 +2,6 @@
 
 <%= render "layouts/menu_item_form" %>
 
+<p><%= link_to "Return to food products", food_products_path %></p>
+
+<p><%= link_to "Return to Menu Items", menu_items_path %></p>
